# mlir-galois

./: .gitignore  CMakeLists.txt  README.md
galois-opt/: CMakeLists.txt  galois-opt.cpp
galois-plugin/: CMakeLists.txt  galois-plugin.cpp
galois-translate/: CMakeLists.txt  galois-translate.cpp
include/: CMakeLists.txt
include/Galois/: CMakeLists.txt  GaloisAttributes.h  GaloisAttributes.td  GaloisDialect.h  GaloisDialect.td  GaloisHelpers.h  GaloisOps.h  GaloisOps.td  GaloisPasses.h  GaloisPasses.td  GaloisTypes.h  GaloisTypes.td
include/Galois-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Galois/: CMakeLists.txt  GaloisAttributes.cpp  GaloisDialect.cpp  GaloisOps.cpp  GaloisPasses.cpp  GaloisTypes.cpp
python/: CMakeLists.txt  GaloisExtensionNanobind.cpp  GaloisExtensionPybind11.cpp
python/mlir_galois/dialects/: GaloisOps.td  galois_nanobind.py  galois_pybind11.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  galois-capi-test.c
test/Galois/: add-verifier.mlir  add.mlir  div.mlir  dummy.mlir  galois-constant.mlir  galois-from-and-to.mlir  galois-opt.mlir  galois-pass-plugin.mlir  galois-plugin.mlir  galois-translate.mlir  galois-type.mlir  hash.mlir  inv.mlir  keyexp.mlir  lagrange.mlir  lfsr.mlir  matmul.mlir  mixcolumns.mlir  mul.mlir  rs.mlir  sbox.mlir  sub.mlir
test/python/: smoketest.py
